--- a/card/index.html
+++ b/card/index.html
@@ -8,7 +8,7 @@
 <meta name="description" content="スクフェス用の検索ツール。特技やステータスなどから部員を検索したり詳細を確認できます。" />
 <meta name="keywords" content="スクフェス,部員一覧,部員検索,カード検索" />
 <meta name="author" content="chieri0611" />
-<!-- update: 2022-04-03 -->
+<!-- update: 2022-04-16 -->
 
 <meta name="og:type" content="article" />
 <meta name="og:url" content="https://chieri0611.github.io/llsif/card/" />
@@ -266,7 +266,7 @@ function update() { saveDeck(1); location.href = '../scorecalc/'; }
     <div class="checkbox"><input type="checkbox" name="aqours" value="106" id="aqours_6" /><label for="aqours_6">津島善子</label></div>
     <div class="checkbox"><input type="checkbox" name="aqours" value="107" id="aqours_7" /><label for="aqours_7">国木田花丸</label></div>
     <div class="checkbox"><input type="checkbox" name="aqours" value="108" id="aqours_8" /><label for="aqours_8">小原鞠莉</label></div>
-    <div class="checkbox"><input type="checkbox" name="aqours" value="r109" id="aqours_9" /><label for="aqours_9">黒澤ルビィ</label></div>
+    <div class="checkbox"><input type="checkbox" name="aqours" value="109" id="aqours_9" /><label for="aqours_9">黒澤ルビィ</label></div>
     <div class="checkbox"><input type="checkbox" name="aqours" value="all" id="aqours_0" /><label for="aqours_0">全て</label></div>
   </div>
 
