--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="description" content="スクフェスに関するデータ・ツール置き場" />
 <meta name="keywords" content="スクフェス" />
 <meta name="author" content="chieri0611" />
-<!-- update: 2022-02-13 -->
+<!-- update: 2023-03-16 -->
 
 <meta name="og:type" content="article" />
 <meta name="og:url" content="https://chieri0611.github.io/llsif/" />
@@ -32,12 +32,13 @@
 </style>
 
 <script type="text/javascript" src="/common.js" charset="UTF-8"></script>
+<script type="text/javascript" src="notice.js" charset="UTF-8"></script>
 <script type="text/javascript">
 </script>
 
 
 </head>
-<body class="theme_main" onload="loadMenuButton('llsif')">
+<body class="theme_main" onload="loadMenuButton('llsif'); sif_Append_Notice();">
 
 
 
