--- a/boostrpt/index.html
+++ b/boostrpt/index.html
@@ -46,6 +46,7 @@ button#list_order { width: 80px; min-width: auto; }
 
 
 <script type="text/javascript" src="../../common.js" charset="UTF-8"></script>
+<script type="text/javascript" src="../notice.js" charset="UTF-8"></script>
 <script type="text/javascript" src="../card/llsif_cardviewer.js" charset="UTF-8"></script>
 <script type="text/javascript">
 var cardlist;
@@ -384,7 +385,7 @@ function view_matrixtable(matrixobj, idolized, chanceval, effectval, skilllevel)
 
 
 </head>
-<body class="theme_main" onload="init()">
+<body class="theme_main" onload="init(); sif_Append_Notice();">
 
 
 
