--- a/index.html
+++ b/index.html
@@ -5,57 +5,86 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta name="viewport" content="width=500,maximum-scale=0.8,user-scalable=no" />
-<meta name="description" content="スクフェスに関するデータ・ツール置き場" />
-<meta name="keywords" content="スクフェス" />
 <meta name="author" content="chieri0611" />
-<!-- update: 2023-03-16 -->
-
-<meta name="og:type" content="article" />
-<meta name="og:url" content="https://chieri0611.github.io/llsif/" />
-<meta name="og:title" content="スクフェス データ・ツール置き場" />
-<meta name="og:description" content="スクフェスに関するデータ・ツール置き場" />
-<meta name="og:image" content="https://chieri0611.github.io/llsif/summary_image.jpg" />
-<meta name="twitter:card" content="summary" />
-<meta name="twitter:site" content="@honohono8316" />
-<meta name="twitter:title" content="スクフェス データ・ツール置き場" />
-<meta name="twitter:description" content="スクフェスに関するデータ・ツール置き場" />
-<meta name="twitter:image" content="https://chieri0611.github.io/llsif/summary_image.jpg" />
+<!-- update: 2023-03-31 -->
 
 <title>スクフェス データ・ツール置き場</title>
 
-<link rel="apple-touch-icon" href="https://chieri0611.github.io/llsif/apple-touch-icon.png" sizes="180x180" />
-<link rel="icon" type="image/png" href="https://chieri0611.github.io/llsif/android-touch-icon.png" sizes="192x192" />
 
-<link rel="stylesheet" type="text/css" href="style.css" />
 <style tyle="text/css">
+/* Body
+============================================================ */
+* { font-size: 0; box-sizing: border-box; }
+body {
+    margin: 90px 0 0; padding: 0; background-color: #ffffff;
+    font-family: 'Helvetica Neue', 'Arial', 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', 'Meiryo UI', sans-serif;
+    -ms-content-zooming: none;
+}
+.content {
+    width: 100%; max-width: 1200px; min-height: calc(100vh - 180px);
+    margin: 0 auto; padding: 10px 30px 100px; touch-action: pan-y; text-align: center;
+}
+
+
+/* Header
+============================================================ */
+header {
+    display: flex; position: fixed; z-index: 900; top: 0; left: 0; overflow: hidden;
+    width: 100%; height: 70px; padding: 10px 20px;
+    background-color: #333; border-bottom: 1px solid #dbdbdb;
+    box-shadow: 0 0 6px rgba(0,0,0,0.4);
+}
+
+header > .icon {
+    width: 50px; border-radius: 50%; margin-right: 10px;
+    user-select: none; -ms-user-select: none;
+}
+header > .title {
+    flex: 1; overflow: hidden; line-height: 50px;
+    color: #eee; font-size: 24px; font-weight: bold;
+    letter-spacing: normal; white-space: nowrap; text-overflow: ellipsis;
+    cursor: default; user-select: none; -ms-user-select: none;
+}
+
+
+.page_message > p {
+    width: 100%; color: #000; font-size: 20px; line-height: 1.6; margin: 1.5em 0; text-align: left;
+}
+.page_message > h1 {
+    color: #f69; font-size: 32px; font-weight: bold;
+}
+a.button {
+    display: inline-block; position: relative; margin: 0; padding: 14px 36px;
+    background-color: #eee; border: none; outline: none; border-radius:  4px;
+    color: #333; font-size: 24px; font-weight: bold; text-align: center; text-decoration: none;
+    cursor: pointer; user-select: none; appearance: none; transition: background 0.2s;
+}
+a.button:active { background-color: #ddd; }
+
 
 </style>
 
-<script type="text/javascript" src="/common.js" charset="UTF-8"></script>
-<script type="text/javascript" src="notice.js" charset="UTF-8"></script>
 <script type="text/javascript">
 </script>
 
 
+
 </head>
-<body class="theme_main" onload="loadMenuButton('llsif'); sif_Append_Notice();">
-
-
-
-<header><div class="title">スクフェス データ・ツール置き場</div></header>
+<body>
+<header>
+<img class="icon" src="https://github.com/chieri0611.png" />
+<div class="title">スクフェス データ・ツール置き場</div>
+</header>
 
 <div class="content">
 
-<div class="heading_text">
-<div class="title">メニュー</div><div class="description"></div>
-<a class="back_button" href="../"></a>
+<div class="page_message">
+<h1>「スクフェス」ページの公開は終了しました</h1>
+<p>「ラブライブ！スクールアイドルフェスティバル」のサービス終了に伴い、2023年4月1日をもちまして「スクフェス」に関するデータ・便利ツールなどのページは公開終了しました。これまでのご利用ありがとうございました。</p>
+<p>なお、後継アプリの「ラブライブ！スクールアイドルフェスティバル2 MIRACLE LIVE!」に関するデータ・便利ツールなどのページの開設予定はございません。</p>
+<a class="button" href="/">トップページへ</a>
 </div>
 
-<div class="menu_frame">
-<div id="menu" class="menu_container noscript">
-  <noscript>JavaScriptが無効になっています</noscript>
-</div>
-</div>
 
 </div>
 
